# uhpm

./: .gitignore  Cargo.toml  LICENSE  README.md  codebase.txt  install.sh  symlist  testbase.txt  uhp.toml  uhpbuild
locale/: C.ron  C.yml  en.ron  en.yml  ru.ron  ru.yml
src/: cli.rs  config.rs  db.rs  error.rs  fetcher.rs  installer.rs  lib.rs  locale.rs  log.rs  main.rs  package.rs  remover.rs  repo.rs  self_remove.rs  service.rs  symlist.rs  updater.rs
src/package/: installer.rs  mocks.rs  remover.rs  switcher.rs  updater.rs
tests/: installer_test.rs  installer_tests.rs  integration_tests.rs  mock_tests.rs  mod.rs  remover_test.rs  switcher_test.rs
