[package]
name = "uhpm"
version = "0.1.0"
edition = "2024"
default-run = "uhpm"

[lib]
name = "uhpm"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "uhpmk"
path = "src/bin/uhpmk.rs"

[[bin]]
name = "uhpm"
path = "src/main.rs"


[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
dirs = "6.0.0"
flate2 = "1.1.2"
futures = "0.3.31"
indicatif = "0.18.0"
libc = "0.2.175"
reqwest = "0.12.23"
ron = "0.11.0"
semver = { version = "1.0.26", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
tar = "0.4.44"

thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt"] }
walkdir = "2.5.0"
[dev-dependencies]
tempfile = "3.21.0"
