[package]
name = "uhpm"
version = "0.0.10"
edition = "2024"
default-run = "uhpm"

[lib]
name = "uhpm"
crate-type = ["cdylib", "rlib"]





[dependencies]
async-trait = "0.1.89"
clap = { version = "4.5.46", features = ["derive"] }
clap_complete = "4.5.57"
dirs = "6.0.0"
env = "1.0.1"
flate2 = "1.1.2"
fluent = "0.17.0"
fluent-resmgr = "0.0.8"
futures = "0.3.31"
i18n = "0.0.2"
i18n-embed = { version = "0.16.0", features = ["fluent","desktop-requester"] }
i18n-embed-fl = "0.10.0"
indicatif = "0.18.0"
libc = "0.2.175"
mockall = "0.13.1"
once_cell = "1.21.3"
reqwest = "0.12.23"
ron = "0.11.0"
rust-embed = "8.7.2"
rust-i18n = "3.1.5"
semver = { version = "1.0.26", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
strfmt = "0.2.5"
sys-locale = "0.3.2"
tar = "0.4.44"

thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-test = "0.4.4"
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt"] }
unic-langid = "0.9.6"
walkdir = "2.5.0"
[dev-dependencies]
tempfile = "3.21.0"


[features]
dev = []

[package.metadata.dev]
features = ["dev"]
